cmake_minimum_required (VERSION 3.0)

SET(PROJECT_NAME GLSMAC)
PROJECT (${PROJECT_NAME})

SET(CMAKE_MODULE_PATH ".")

SET(EXECUTABLE_OUTPUT_PATH "bin")

SET(SRC "")
SET(PWD ".")

ADD_CUSTOM_TARGET( glsmac_version )

ADD_CUSTOM_COMMAND(
	TARGET glsmac_version PRE_BUILD
	COMMAND git show -s --format='\#define GLSMAC_LAST_COMMIT \"%h\"' > ./src/tmp/last_commit.h
	DEPENDS .git/COMMIT_EDITMSG
)

FUNCTION(SUBDIR DIR)
	SET(PWD "${PWD}/${DIR}")
	ADD_SUBDIRECTORY(${DIR})
	SET(SRC ${SRC} PARENT_SCOPE)
ENDFUNCTION(SUBDIR)

SUBDIR(src)
ADD_EXECUTABLE(${PROJECT_NAME}
	${SRC}
)

IF(CMAKE_BUILD_TYPE STREQUAL "")
	SET(CMAKE_BUILD_TYPE "Release") # release by default
ENDIF()

IF(CMAKE_BUILD_TYPE STREQUAL "Debug")
    TARGET_COMPILE_DEFINITIONS(${PROJECT_NAME} PRIVATE DEBUG=1)
	SET(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -ggdb -O0")
ELSE()
	TARGET_COMPILE_DEFINITIONS(${PROJECT_NAME} PRIVATE DEBUG=0)
	SET(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -s -O3")
	IF(CMAKE_BUILD_TYPE STREQUAL "Portable")
		MESSAGE(FATAL_ERROR "Portable target is deprecated, please use Portable32 or Portable64 instead")
	ELSEIF(CMAKE_BUILD_TYPE STREQUAL "Portable64" OR CMAKE_BUILD_TYPE STREQUAL "Portable32")
		TARGET_COMPILE_DEFINITIONS(${PROJECT_NAME} PRIVATE PORTABLE=1)
		IF (CMAKE_BUILD_TYPE STREQUAL "Portable32")
			SET(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -m32 -march=i686 -mtune=i686")
		ELSEIF (CMAKE_BUILD_TYPE STREQUAL "Portable64")
			SET(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -m64 -march=x86-64 -mtune=k8")
		ENDIF()
	ELSEIF(CMAKE_BUILD_TYPE STREQUAL "Release")
		SET(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -march=native")
	ELSE()
		MESSAGE(FATAL_ERROR "Invalid CMAKE_BUILD_TYPE \"${CMAKE_BUILD_TYPE}\", use one of: \nDebug\nRelease\nPortable32\nPortable64")
	ENDIF()
ENDIF()

INCLUDE_DIRECTORIES("src")

INCLUDE(FindPkgConfig)

PKG_SEARCH_MODULE(FT2 REQUIRED freetype2)
PKG_SEARCH_MODULE(SDL2 REQUIRED sdl2)
PKG_SEARCH_MODULE(SDL2IMAGE REQUIRED SDL2_image>=2.0.0)
PKG_SEARCH_MODULE(GLU REQUIRED glu)
PKG_SEARCH_MODULE(GLEW REQUIRED glew)

INCLUDE_DIRECTORIES(${FT2_INCLUDE_DIRS} ${SDL2_INCLUDE_DIRS} ${SDL2IMAGE_INCLUDE_DIRS} ${GLU_INCLUDE_DIRS} ${GLEW_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${FT2_LIBRARIES} ${SDL2_LIBRARIES} ${SDL2IMAGE_LIBRARIES} ${GLU_LIBRARIES} ${GLEW_LIBRARIES})

ADD_DEPENDENCIES(${PROJECT_NAME} glsmac_version)

SET( CMAKE_CXX_FLAGS  " -std=c++17 ${CMAKE_CXX_FLAGS} " )
