INCLUDE( FetchContent )
INCLUDE( ExternalProject )

SET( CMAKE_POLICY_DEFAULT_CMP0077 NEW ) # Needed for freetype
SET( BUILD_SHARED_LIBS OFF )

ADD_SUBDIRECTORY( SDL2 )

ADD_SUBDIRECTORY( SDL2_image )

ADD_SUBDIRECTORY( glew )

ADD_SUBDIRECTORY( freetype )

IF ( NOT WIN32 ) # TODO: make it buildable on windows
	ADD_SUBDIRECTORY( ossp-uuid )
	SET( OSSP_UUID_INCLUDE_DIR "${OSSP_UUID_INCLUDE_DIR}" PARENT_SCOPE )
	SET( OSSP_UUID_LINK_OPTIONS "${OSSP_UUID_LINK_OPTIONS}" PARENT_SCOPE )
ENDIF()

ADD_SUBDIRECTORY( yaml-cpp )
SET( YAML_CPP_LINK_OPTIONS "${YAML_CPP_LINK_OPTIONS}" PARENT_SCOPE )
