CMAKE_MINIMUM_REQUIRED( VERSION 3.13 )

SET( CMAKE_MODULE_PATH "." )
SET( EXECUTABLE_OUTPUT_PATH "bin" )
ADD_EXECUTABLE( embedder embedder.cpp )
IF ( CMAKE_BUILD_TYPE STREQUAL "Debug" OR CMAKE_BUILD_TYPE STREQUAL "FastDebug" )
	TARGET_COMPILE_DEFINITIONS( embedder PRIVATE DEBUG=1 )
ENDIF ()
SET_PROPERTY( TARGET embedder PROPERTY CXX_STANDARD 17 )
