MESSAGE( STATUS "Fetching SDL_image..." )

SET( SDL2IMAGE_INSTALL OFF )
SET( SDL2IMAGE_SAMPLES OFF )

SET( SDL2IMAGE_LBM OFF )
SET( SDL2IMAGE_PNM OFF )
SET( SDL2IMAGE_QOI OFF )
SET( SDL2IMAGE_SVG OFF )
SET( SDL2IMAGE_TGA OFF )
SET( SDL2IMAGE_XCF OFF )
SET( SDL2IMAGE_XPM OFF )
SET( SDL2IMAGE_XV OFF )

FETCHCONTENT_DECLARE( sdl_image
	GIT_REPOSITORY https://github.com/libsdl-org/SDL_image
	GIT_TAG release-2.8.2
	)

FETCHCONTENT_MAKEAVAILABLE( sdl_image )
