#GLEW <- DO NOT REMOVE; NEEDED FOR A TEST

CMAKE_MINIMUM_REQUIRED( VERSION 3.4 )

PROJECT( fetch_content )

MESSAGE( STATUS "Fetching GLEW ..." )

INCLUDE( FetchContent )
FETCHCONTENT_DECLARE(
	glew
	GIT_REPOSITORY https://github.com/Perlmint/glew-cmake.git
	GIT_TAG origin/master
)

FETCHCONTENT_GETPROPERTIES( glew )
IF ( NOT glew_POPULATED )
	FETCHCONTENT_POPULATE( glew )

	ADD_SUBDIRECTORY( ${glew_SOURCE_DIR} ${glew_BINARY_DIR} EXCLUDE_FROM_ALL )
ENDIF ()
